[project]
name = "random-programs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.3",
    "openai>=1.3.0",
    "chromadb>=1.1.0",
]
